:bug: Fix footer dark mode

--- a/leblanc/components/common/Footer/Footer.module.css
+++ b/leblanc/components/common/Footer/Footer.module.css
@@ -1,6 +1,7 @@
 .root {
   @apply flex;
   @apply lg:border-t-[1px] border-black border-solid;
+  @apply text-text-primary;
 }
 
 .imageContainer {
@@ -76,4 +77,10 @@
 }
 .acpLogo {
   @apply ml-auto;
+}
+
+:global(.dark) {
+  & .root {
+    @apply text-primary-2;
+  }
 }
